src/snapshots/rusty__hardware_binding__tests__hardware_printed_fb.snap
---
source: src/hardware_binding.rs
assertion_line: 309
expression: res

---
{
  "HardwareConfiguration": [
    [
      {
        "name": "gFb.a",
        "direction": "Input",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "gFb.b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      }
    ],
    [
      {
        "name": "gFb.c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      }
    ],
    [
      {
        "name": "gFb.d",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "gFb.e",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "gFb.f",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "gFb.x",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "gFb.y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      }
    ],
    [
      {
        "name": "gFb.z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      }
    ],
    [
      {
        "name": "aFb[0].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[1].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[2].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb[0].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb[1].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb[2].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      }
    ],
    [
      {
        "name": "aFb[0].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb[1].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb[2].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      }
    ],
    [
      {
        "name": "aFb[0].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[1].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[2].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb[0].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[1].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[2].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb[0].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[1].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[2].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb[0].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[1].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb[2].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb[0].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      },
      {
        "name": "aFb[1].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      },
      {
        "name": "aFb[2].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      }
    ],
    [
      {
        "name": "aFb[0].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      },
      {
        "name": "aFb[1].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      },
      {
        "name": "aFb[2].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      }
    ],
    [
      {
        "name": "aFb2[0,1].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,1].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,1].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[0,2].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,2].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,2].a",
        "direction": "Input",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb2[0,1].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[1,1].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[2,1].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[0,2].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[1,2].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[2,2].b",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      }
    ],
    [
      {
        "name": "aFb2[0,1].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[1,1].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[2,1].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[0,2].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[1,2].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      },
      {
        "name": "aFb2[2,2].c",
        "direction": "Output",
        "type": "Word",
        "address": [
          "2",
          "5"
        ]
      }
    ],
    [
      {
        "name": "aFb2[0,1].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,1].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,1].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[0,2].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,2].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,2].d",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb2[0,1].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,1].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,1].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[0,2].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,2].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,2].e",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb2[0,1].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,1].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,1].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[0,2].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,2].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,2].f",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb2[0,1].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,1].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,1].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[0,2].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[1,2].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      },
      {
        "name": "aFb2[2,2].x",
        "direction": "Output",
        "type": "Template",
        "address": []
      }
    ],
    [
      {
        "name": "aFb2[0,1].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      },
      {
        "name": "aFb2[1,1].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      },
      {
        "name": "aFb2[2,1].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      },
      {
        "name": "aFb2[0,2].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      },
      {
        "name": "aFb2[1,2].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      },
      {
        "name": "aFb2[2,2].y",
        "direction": "Output",
        "type": "Word",
        "address": [
          "1"
        ]
      }
    ],
    [
      {
        "name": "aFb2[0,1].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      },
      {
        "name": "aFb2[1,1].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      },
      {
        "name": "aFb2[2,1].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      },
      {
        "name": "aFb2[0,2].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      },
      {
        "name": "aFb2[1,2].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      },
      {
        "name": "aFb2[2,2].z",
        "direction": "Input",
        "type": "Word",
        "address": [
          "1",
          "2"
        ]
      }
    ]
  ]
}
